# InverseCompton-on-CMB

./: .gitignore  CMakeLists.txt  LICENSE  README.html  README.md
doc/: Doxyfile
src/: main.c
src/common/: common_physical_const.c  common_physical_const.h  common_typedef.h
src/ics/: ics_jones_approx.c  ics_jones_approx.h  ics_thomson_approx.c  ics_thomson_approx.h
src/numerics/: numerics_integration.h  numerics_simpson.c  numerics_simpson.h  numerics_trapezoidal.c  numerics_trapezoidal.h
src/particles/: particles_cmb.c  particles_cmb.h  particles_electron.c  particles_electron.h
